# rna_motif_library

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  MANIFEST.in  README.md  build.ninja  cmake_install.cmake  dssr_hbonds.py  figure_plotting.py  requirements.txt  rna_motif_library  settings.py  setup.py  update_library.py
intergration_tests/: parse_all_x3dna_nt_strs.py
notebooks/: Untitled.ipynb  check_motifs.ipynb  compare_atlas.ipynb  compare_dssr.ipynb  counters.ipynb  large_motifs.ipynb  make_csv_of_new_set.py  make_sets.py  non_redundant_motifs.ipynb  quality_check_structures.ipynb  rna_ligand.ipynb  rna_protein.ipynb  tertiary_contacts.ipynb
resources/: 1GID.json  1gid.cif  1gid.out  interactions_detailed.csv  residue_counts.csv  single_motif_inter_list.csv  twoway_motif_list.csv  unique_tert_contacts.csv
rna_motif_library/: basepair.py  chain.py  classes.py  cli.py  dataframe_tools.py  dssr.py  dssr_hbonds.py  dssr_lib.py  figure_plotting.py  flask_update_lib.py  generate_release.py  hbond.py  interactions.py  json_query.json  ligand.py  logger.py  motif.py  motif_analysis.py  motif_factory.py  motif_from_dssr.py  old_code.py  old_code.txt  parallel_utils.py  pdb_data.py  pdb_queries.py  plotting.py  residue.py  resources.py  settings.py  setup_database.py  snap.py  summaries.py  tert_contacts.py  tertiary_contacts.py  test.out  test_dssr.py  test_hbonds.py  test_snap.py  tranforms.py  update_library.py  (+3 more)
scripts/: all_x3dna_pairs_have_interactions.py  analyze_duplicates.py  analyze_ligands.py  assign_ligand_type.py  assign_pdb_type.py  (+71 more)
(+1291 files in other folders)
